re PR fortran/39309 (.mod file versioning causes error instead of overwritting the file)

2009-02-27  Tobias Burnus  <burnus@net-b.de>

        PR fortran/39309
        * module.c (read_md5_from_module_file): Include mod version
        in had-changed test.

From-SVN: r144461